--- a/_posts/2016-10-16-marsden.md
+++ b/_posts/2016-10-16-marsden.md
@@ -4,7 +4,7 @@ title:  "Who is Karna?"
 description: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis vehicula tincidunt lacus nec fringilla. Morbi molestie fringilla laoreet. Vestibulum venenatis ante in imperdiet venenatis. 
 date:   2016-06-13 10:51:47 +0530
 categories: jekyll update
-img: karna.jpg
+img: marsden.jpg
 categories: [one, two]
 color: 1976D2
 author: webjeda
