--- a/_posts/2016-07-08-seed-pod.md
+++ b/_posts/2016-07-08-seed-pod.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Example 4"
+title:  "Seed Pod"
 description: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis vehicula tincidunt lacus nec fringilla. Morbi molestie fringilla laoreet. Vestibulum venenatis ante in imperdiet venenatis. 
 date:  2016-06-13 10:51:47 +0530
 categories: jekyll update
